--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Todo App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-icon.png" />
     <!--
@@ -44,8 +44,7 @@
 
         <hr>
         <div class="list-group list-group-flush">
-          <a href="/" class="list-group-item  bg-pp">Pending Tasks</a>
-          <a href="#" class="list-group-item bg-pp">Completed tasks</a>
+          <a href="/" class="list-group-item  bg-pp">Tasks</a>
           <!-- <a href="/login" class="list-group-item bg-pp">Login</a> -->
 
         </div>
